--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <spring.version>4.3.7.RELEASE</spring.version>
+        <spring.version>4.3.6.RELEASE</spring.version>
         <hibernate.version>5.2.8.Final</hibernate.version>
+        <hibernate.EM.version>5.2.3.Final</hibernate.EM.version>
         <postgres.version>9.4.1212</postgres.version>
+        <lombok.version>1.16.12</lombok.version>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -40,9 +45,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgres.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
 
     </dependencies>
