Add user's role

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 !/.mvn/wrapper/maven-wrapper.jar
+src/main/java/com/endava/dao/
+src/main/webapp/
