--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <hibernate.EM.version>5.2.3.Final</hibernate.EM.version>
         <postgres.version>9.4.1212</postgres.version>
         <lombok.version>1.16.12</lombok.version>
+        <junit.version>4.12</junit.version>
+        <mockito.version>2.7.12</mockito.version>
+
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -60,6 +63,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
         </dependency>
 
     </dependencies>
