--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,8 +1,7 @@
-jdbc.schema.name = purse
-jdbc.driver.className = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/postgres
-jdbc.username = postgres
-jdbc.password = 1111
+jdbc.driver.className = org.h2.Driver
+jdbc.url = jdbc:h2:~/test
+jdbc.username = -user
+jdbc.password = ""
 
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.packagesToScan = com.endava.model
