--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,7 +2,8 @@ jdbc.schema.name = purse
 jdbc.driver.className = org.postgresql.Driver
 jdbc.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.username = postgres
-jdbc.password = 1111
+jdbc.password = postgres
 
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.packagesToScan = com.endava.model
+hibernate.hbm2ddl.auto = none
